--- a/less/forms.less
+++ b/less/forms.less
@@ -55,6 +55,11 @@
     border: 1px solid transparent;
     border-radius: .25rem;
     transition: all .1s ease-in-out;
+    display: none;
+    
+    &:a {
+        display: block;
+    }
 }
 
 /* Fallback for Edge
