--- a/less/global.less
+++ b/less/global.less
@@ -2,7 +2,7 @@
 	global.less
 -----------------------------------------------------------------------------------*/
 * {
-    // border: .5px solid #bbb !important;
+    border: .5px solid #bbb !important;
     max-width: 100%;
 }
 
@@ -20,10 +20,6 @@ h2,
 h3,
 h4 {
     font-family: @heading-font;
-}
-
-strong {
-    font-weight: bold;
 }
 
 header {
