--- a/less/home-page.less
+++ b/less/home-page.less
@@ -24,7 +24,7 @@
         padding: 1.5rem;
 
         @media @tablet {
-            width: 60%;
+            width: 70%;
         }
 
         h2 {
